Convert time micro survivor to tiny micro shmup
Now it's a vertically scrolling shooter!

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -82,17 +82,21 @@ Group           = hud
 
 ; Texture containing object graphics
 
-[TinyDungeonGraphic]
-Texture         = Tiny Dungeon/Tilemap/tilemap_packed.png
-TextureSize     = (16, 16)
+[PixelShipsGraphic]
+Texture         = Pixel Shmup/Tilemap/ships_packed.png
+TextureSize     = (32, 32)
 TextureOrigin   = % > Get "" TextureSize, > Get "" TileOffset, * < <
 Smoothing       = false
+
+[PixelTilesGraphic@PixelShipsGraphic]
+Texture         = Pixel Shmup/Tilemap/tiles_packed.png
+TextureSize     = (16, 16)
 
 ; Player character
 
 [Character]
 Graphic         = CharacterGraphic
-Scale           = 2
+Scale           = 1
 Pivot           = center
 Body            = CharacterBody
 ChildList       = HealthBar # Attack
@@ -106,8 +110,8 @@ Speed           = 100.0
 ; Healing rate
 HealthPS        = 1
 
-[CharacterGraphic@TinyDungeonGraphic]
-TileOffset      = (0, 8)
+[CharacterGraphic@PixelShipsGraphic]
+TileOffset      = (3, 2)
 
 [CharacterInput]
 KEY_W           = Up
@@ -122,34 +126,25 @@ KEY_RIGHT       = Right
 [CharacterBody]
 Dynamic         = true
 FixedRotation   = true
-PartList        = CharacterHitPart ;# CharacterAttackPart
+PartList        = CharacterHitPart
 
 [CharacterHitPart]
 Type            = box
 SelfFlags       = character
-CheckMask       = mob
-Solid           = false
-
-[CharacterAttackPart]
-Type            = sphere
-Radius          = 50
-SelfFlags       = attack
-CheckMask       = mob
+CheckMask       = mob # mobattack
 Solid           = false
 
 ; Player character's attack
 
-[Knife@TinyDungeonGraphic]
-TileOffset      = (7, 8)
-
-[BattleAxe@TinyDungeonGraphic]
-TileOffset      = (10, 9)
+[Bullet@PixelTilesGraphic]
+TileOffset      = (0, 0)
 
 [AttackProjectile]
-Graphic         = BattleAxe
-Speed           = (-250, -250) ~ (250, 250)
-AngularVelocity = -360 ~ 360
-LifeTime        = 1.5
+Graphic         = Bullet
+Speed           = (0, -150)
+Pivot           = center
+Position        = (-5, -17) ~ (5, -17)
+LifeTime        = 3
 Body            = AttackProjectileBody
 
 [AttackProjectileBody]
@@ -167,10 +162,9 @@ Solid           = false
 Spawner         = @
 Object          = AttackProjectile
 ActiveObject    = 10
-WaveSize        = 1 ~ 2
+WaveSize        = 1
 WaveDelay       = 0.1
 CleanOnDelete   = true
-;IgnoreFromParent= scale
 
 ; Health bar
 
@@ -206,39 +200,51 @@ Pivot           = left
 
 ; Mobs
 
-[Spirit@Mob]
-TileOffset      = (0, 9)
+[BlueA@Mob]
+[BlueAGraphic@PixelShipsGraphic]
+TileOffset      = (0, 0)
 
-[Cyclops@Mob]
-TileOffset      = (1, 9)
+[RedA@Mob]
+[RedAGraphic@PixelShipsGraphic]
+TileOffset      = (1, 0)
 
-[Crab@Mob]
-TileOffset      = (2, 9)
+[GreenA@Mob]
+[GreenAGraphic@PixelShipsGraphic]
+TileOffset      = (2, 0)
 
-[Bat@Mob]
-TileOffset      = (0, 10)
 
-[Ghost@Mob]
-TileOffset      = (1, 10)
+[BlueB@Mob]
+[BlueBGraphic@PixelShipsGraphic]
+TileOffset      = (0, 1)
 
-[Spider@Mob]
-TileOffset      = (2, 10)
+[RedB@Mob]
+[RedBGraphic@PixelShipsGraphic]
+TileOffset      = (1, 1)
 
-[Rat@Mob]
-TileOffset      = (3, 10)
+[GreenB@Mob]
+[GreenBGraphic@PixelShipsGraphic]
+TileOffset      = (2, 1)
 
-[Mouse@Mob]
-TileOffset      = (4, 10)
+[BlueC@Mob]
+[BlueCGraphic@PixelShipsGraphic]
+TileOffset      = (0, 2)
 
-[Mob@TinyDungeonGraphic]
-Position        = (-600, -400) ~ (600, -200) # (-600, 400) ~ (600, 200) # (-600, -400) ~ (-400, 400) # (400, -400) ~ (600, 400)
-Graphic         = @
-Scale           = 1
+[RedC@Mob]
+[RedCGraphic@PixelShipsGraphic]
+TileOffset      = (1, 2)
+
+[GreenC@Mob]
+[GreenCGraphic@PixelShipsGraphic]
+TileOffset      = (2, 2)
+
+[Mob]
+Position        = (-600, -350) ~ (600, -340)
+Graphic         = % > @, return "<Graphic"
+Flip            = y
 Pivot           = center
 Body            = MobBody
 
-; Movement speed
-Speed           = 50.0 ~ 150.0
+Speed           = (0, 50.0) ~ (0, 150.0)
 
 [MobBody]
 Dynamic         = true
@@ -255,9 +261,9 @@ HealthImpact    = -5
 
 [Mobs]
 Spawner         = @
-Object          = Spirit # Cyclops # Crab # Bat # Ghost # Spider # Rat # Mouse
-ActiveObject    = 50
-WaveSize        = 1 ~ 10
-WaveDelay       = 0.01
+Object          = RedA # RedB # RedC # BlueA # BlueB # BlueC # GreenA # GreenB # GreenC
+ActiveObject    = 500
+WaveSize        = 1 ~ 50
+WaveDelay       = 0.1
 UseSelfAsParent = true
 CleanOnDelete   = true
