Add mob projectiles

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -99,7 +99,7 @@ Graphic         = CharacterGraphic
 Scale           = 1
 Pivot           = center
 Body            = CharacterBody
-ChildList       = HealthBar # Attack
+ChildList       = HealthBar # CharacterAttack
 
 ; Input set
 Input           = CharacterInput
@@ -131,17 +131,16 @@ PartList        = CharacterHitPart
 [CharacterHitPart]
 Type            = box
 SelfFlags       = character
-CheckMask       = mob # mobattack
+CheckMask       = mob # attack
 Solid           = false
 
-; Player character's attack
+; Attack objects
 
 [Bullet@PixelTilesGraphic]
 TileOffset      = (0, 0)
 
 [AttackProjectile]
 Graphic         = Bullet
-Speed           = (0, -150)
 Pivot           = center
 Position        = (-5, -17) ~ (5, -17)
 LifeTime        = 3
@@ -158,12 +157,46 @@ SelfFlags       = attack
 CheckMask       = mob
 Solid           = false
 
-[Attack]
+; Character attack
+
+[CharacterAttackProjectile@AttackProjectile]
+Body            = CharacterAttackProjectileBody
+Speed           = (0, -150)
+
+[CharacterAttackProjectileBody@AttackProjectileBody]
+PartList        = CharacterAttackProjectileBodyPart
+
+[CharacterAttackProjectileBodyPart@AttackProjectileBodyPart]
+CheckMask       = mob
+
+[CharacterAttack@Attack]
 Spawner         = @
-Object          = AttackProjectile
+Object          = CharacterAttackProjectile
 ActiveObject    = 10
 WaveSize        = 1
 WaveDelay       = 0.1
+CleanOnDelete   = true
+
+; Mob attack
+
+[MobAttackProjectile@AttackProjectile]
+Body            = MobAttackProjectileBody
+Flip            = y
+Speed           = (0, 150)
+
+[MobAttackProjectileBody@AttackProjectileBody]
+PartList        = MobAttackProjectileBodyPart
+
+[MobAttackProjectileBodyPart@AttackProjectileBodyPart]
+CheckMask       = character
+HealthImpact    = -1
+
+[MobAttack@Attack]
+Spawner         = @
+Object          = MobAttackProjectile
+ActiveObject    = 1
+WaveSize        = 1
+WaveDelay       = 1 ~ 5
 CleanOnDelete   = true
 
 ; Health bar
@@ -243,8 +276,10 @@ Graphic         = % > @, return "<Graphic"
 Flip            = y
 Pivot           = center
 Body            = MobBody
+ChildList       = MobAttack
 
-Speed           = (0, 50.0) ~ (0, 150.0)
+Speed           = (0, 25.0) ~ (0, 50.0)
+OnDestruction   = Game.AddScore 1
 
 [MobBody]
 Dynamic         = true
