Improve mob behavior and attack patterns

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -142,7 +142,6 @@ TileOffset      = (0, 0)
 [AttackProjectile]
 Graphic         = Bullet
 Pivot           = center
-Position        = (-5, -17) ~ (5, -17)
 LifeTime        = 3
 Body            = AttackProjectileBody
 
@@ -162,6 +161,7 @@ Solid           = false
 [CharacterAttackProjectile@AttackProjectile]
 Body            = CharacterAttackProjectileBody
 Speed           = (0, -150)
+Position        = (-5, -17) ~ (5, -17)
 
 [CharacterAttackProjectileBody@AttackProjectileBody]
 PartList        = CharacterAttackProjectileBodyPart
@@ -174,7 +174,7 @@ Spawner         = @
 Object          = CharacterAttackProjectile
 ActiveObject    = 10
 WaveSize        = 1
-WaveDelay       = 0.1
+WaveDelay       = 0.2
 CleanOnDelete   = true
 
 ; Mob attack
@@ -182,7 +182,7 @@ CleanOnDelete   = true
 [MobAttackProjectile@AttackProjectile]
 Body            = MobAttackProjectileBody
 Flip            = y
-Speed           = (0, 150)
+Position        = (-5, 17) ~ (5, 17)
 
 [MobAttackProjectileBody@AttackProjectileBody]
 PartList        = MobAttackProjectileBodyPart
@@ -194,10 +194,12 @@ HealthImpact    = -1
 [MobAttack@Attack]
 Spawner         = @
 Object          = MobAttackProjectile
-ActiveObject    = 1
+ActiveObject    = 10
 WaveSize        = 1
-WaveDelay       = 1 ~ 5
+WaveDelay       = 0.3 ~ 2
 CleanOnDelete   = true
+ObjectSpeed     = (0, 250)
+UseRelativeSpeed= true
 
 ; Health bar
 
@@ -259,14 +261,25 @@ TileOffset      = (1, 1)
 TileOffset      = (2, 1)
 
 [BlueC@Mob]
+FXList          = @
+SlotList        = MobWobbleFX
+Loop            = true
+
 [BlueCGraphic@PixelShipsGraphic]
 TileOffset      = (0, 2)
 
 [RedC@Mob]
+Rotation        = -45 ~ 45
+UseRelativeSpeed= true
+
 [RedCGraphic@PixelShipsGraphic]
 TileOffset      = (1, 2)
 
 [GreenC@Mob]
+FXList          = @
+SlotList        = MobFlip # MobTurnFX # MobWobbleFX
+Loop            = true
+
 [GreenCGraphic@PixelShipsGraphic]
 TileOffset      = (2, 2)
 
@@ -277,9 +290,33 @@ Flip            = y
 Pivot           = center
 Body            = MobBody
 ChildList       = MobAttack
+Age             = 0 ~ 1
 
-Speed           = (0, 25.0) ~ (0, 50.0)
+Speed           = (0, 50.0) ~ (0, 100.0)
 OnDestruction   = Game.AddScore 1
+
+[MobWobbleFX]
+Type            = speed
+Curve           = sine
+StartTime       = 0
+EndTime         = 3
+StartValue      = (150, 150)
+EndValue        = (-150, 150)
+Absolute        = true
+
+[MobTurnFX@MobWobbleFX]
+Type            = rotation
+StartValue      = -45
+EndValue        = 45
+
+[MobFlipFX]
+Type            = scale
+Curve           = sine
+StartTime       = 0
+EndTime         = 1
+StartValue      = (1, 1)
+EndValue        = (0.5, 1)
+Absolute        = true
 
 [MobBody]
 Dynamic         = true
@@ -296,9 +333,10 @@ HealthImpact    = -5
 
 [Mobs]
 Spawner         = @
-Object          = RedA # RedB # RedC # BlueA # BlueB # BlueC # GreenA # GreenB # GreenC
-ActiveObject    = 500
-WaveSize        = 1 ~ 50
+;Object          = RedA # RedB # RedC # BlueA # BlueB # BlueC # GreenA # GreenB # GreenC
+Object          = RedC # BlueC # GreenC
+ActiveObject    = 50
+WaveSize        = 1 ~ 5
 WaveDelay       = 0.1
 UseSelfAsParent = true
 CleanOnDelete   = true
