Some graphics cleanup, add explosions

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -8,6 +8,9 @@ Decoration      = false
 Smoothing       = true
 VSync           = true
 
+[Mouse]
+ShowCursor      = false
+
 [Resource]
 Texture         = ../data/texture
 Sound           = ../data/sound
@@ -139,6 +142,9 @@ Solid           = false
 [Bullet@PixelTilesGraphic]
 TileOffset      = (0, 0)
 
+[BulletInverted@PixelTilesGraphic]
+TileOffset      = (2, 0)
+
 [AttackProjectile]
 Graphic         = Bullet
 Pivot           = center
@@ -181,6 +187,7 @@ CleanOnDelete   = true
 
 [MobAttackProjectile@AttackProjectile]
 Body            = MobAttackProjectileBody
+Graphic         = BulletInverted
 Flip            = y
 Position        = (-5, 17) ~ (5, 17)
 
@@ -215,7 +222,6 @@ ChildList       = HealthBarBackground # HealthBarLevel
 UseParentSpace  = position
 Position        = top -> bottom (0, 0.1)
 Group           = hud
-Alpha           = 0.6
 
 [HealthBarBackground]
 Alpha           = @HealthBar.Alpha
@@ -223,6 +229,7 @@ Graphic         = @
 Texture         = pixel
 Size            = (30, 6)
 Color           = HealthBackground
+Alpha           = 0.6
 Pivot           = top center
 Position        = (0, 0, 0.2)
 
@@ -277,7 +284,7 @@ TileOffset      = (1, 2)
 
 [GreenC@Mob]
 FXList          = @
-SlotList        = MobFlip # MobTurnFX # MobWobbleFX
+SlotList        = MobFlipFX # MobTurnFX # MobWobbleFX
 Loop            = true
 
 [GreenCGraphic@PixelShipsGraphic]
@@ -294,6 +301,8 @@ Age             = 0 ~ 1
 
 Speed           = (0, 50.0) ~ (0, 100.0)
 OnDestruction   = Game.AddScore 1
+
+OnDelete        = > Object.GetPosition ^ true, > Object.Create Explosion, Object.SetPosition < < true
 
 [MobWobbleFX]
 Type            = speed
@@ -313,7 +322,7 @@ EndValue        = 45
 Type            = scale
 Curve           = sine
 StartTime       = 0
-EndTime         = 1
+EndTime         = 1.5
 StartValue      = (1, 1)
 EndValue        = (0.5, 1)
 Absolute        = true
@@ -340,3 +349,23 @@ WaveSize        = 1 ~ 5
 WaveDelay       = 0.1
 UseSelfAsParent = true
 CleanOnDelete   = true
+
+; Explosion
+
+[Explosion]
+AnimationSet    = ExplosionAnimationSet
+LifeTime        = anim
+
+[ExplosionAnimationSet]
+Texture         = @PixelTilesGraphic.Texture
+TextureOrigin   = (64, 0)
+FrameSize       = @PixelTilesGraphic.TextureSize
+StartAnim       = ExplosionAnim
+
+ExplosionAnim   = 5
+EndAnim         = empty
+
+ExplosionAnim-> = EndAnim
+
+[ExplosionAnim]
+KeyDuration     = 0.2
