Fix mob movement FX

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -268,9 +268,7 @@ TileOffset      = (1, 1)
 TileOffset      = (2, 1)
 
 [BlueC@Mob]
-FXList          = @
-SlotList        = MobWobbleFX
-Loop            = true
+FXList          = MobWobbleFX
 
 [BlueCGraphic@PixelShipsGraphic]
 TileOffset      = (0, 2)
@@ -283,9 +281,7 @@ UseRelativeSpeed= true
 TileOffset      = (1, 2)
 
 [GreenC@Mob]
-FXList          = @
-SlotList        = MobFlipFX # MobTurnFX # MobWobbleFX
-Loop            = true
+FXList          = MobFlipFX # MobTurnFX # MobWobbleFX
 
 [GreenCGraphic@PixelShipsGraphic]
 TileOffset      = (2, 2)
@@ -305,6 +301,8 @@ OnDestruction   = Game.AddScore 1
 OnDelete        = > Object.GetPosition ^ true, > Object.Create Explosion, Object.SetPosition < < true
 
 [MobWobbleFX]
+SlotList        = @
+Loop            = true
 Type            = speed
 Curve           = sine
 StartTime       = 0
@@ -319,6 +317,8 @@ StartValue      = -45
 EndValue        = 45
 
 [MobFlipFX]
+SlotList        = @
+Loop            = true
 Type            = scale
 Curve           = sine
 StartTime       = 0
