Spawn mobs in waves

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -28,6 +28,7 @@ FrustumFar      = 2
 FrustumNear     = 0
 Position        = (0, 0, -1) ; Objects with -1 <= Z <= 1 will be visible
 GroupList       = background # default # hud
+Zoom            = 1
 
 [Scene]
 ChildList       = Logo # Sound # Character # Mobs # Score
@@ -287,7 +288,6 @@ FXList          = MobFlipFX # MobTurnFX # MobWobbleFX
 TileOffset      = (2, 2)
 
 [Mob]
-Position        = (-600, -350) ~ (600, -340)
 Graphic         = % > @, return "<Graphic"
 Flip            = y
 Pivot           = center
@@ -340,13 +340,39 @@ Solid           = false
 
 HealthImpact    = -5
 
+[RedCWave]
+Spawner         = RedCSpawner
+Position        = (-600, -300) ~ (600, -300)
+LifeTime        = spawner
+
+[RedCSpawner]
+Object          = RedC
+WaveSize        = 1
+WaveDelay       = 0.3
+TotalObject     = 3 ~ 10
+Immediate       = true
+
+[BlueCWave@RedCWave]
+Spawner         = BlueCSpawner
+
+[BlueCSpawner@RedCSpawner]
+Object          = BlueC
+
+[GreenCWave@RedCWave]
+Spawner         = GreenCSpawner
+
+[GreenCSpawner@RedCSpawner]
+Object          = GreenC
+
 [Mobs]
 Spawner         = @
 ;Object          = RedA # RedB # RedC # BlueA # BlueB # BlueC # GreenA # GreenB # GreenC
-Object          = RedC # BlueC # GreenC
-ActiveObject    = 50
-WaveSize        = 1 ~ 5
-WaveDelay       = 0.1
+;Object          = RedC # BlueC # GreenC
+Object          = RedCWave # BlueCWave # GreenCWave
+;ActiveObject    = 1
+WaveSize        = 1 ~ 3
+WaveDelay       = 2 ~ 5
+Immediate       = true
 UseSelfAsParent = true
 CleanOnDelete   = true
 
