Increase bullet damage and fix bullet scaling
Thank you @iarwain for the suggestions!

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -197,7 +197,7 @@ PartList        = MobAttackProjectileBodyPart
 
 [MobAttackProjectileBodyPart@AttackProjectileBodyPart]
 CheckMask       = character
-HealthImpact    = -1
+HealthImpact    = -5
 
 [MobAttack@Attack]
 Spawner         = @
@@ -208,6 +208,7 @@ WaveDelay       = 0.3 ~ 2
 CleanOnDelete   = true
 ObjectSpeed     = (0, 250)
 UseRelativeSpeed= true
+UseScale        = false
 
 ; Health bar
 
@@ -338,7 +339,7 @@ SelfFlags       = mob
 CheckMask       = character # attack
 Solid           = false
 
-HealthImpact    = -5
+HealthImpact    = -20
 
 [RedCWave]
 Spawner         = RedCSpawner
