Visual updates to explosions and mob spawns
- Enemy ships spawn just above the visible playfield
- Fancy explosion when player runs out of health
- Small explosion when enemy shots hit or are destroyed

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -104,6 +104,7 @@ Scale           = 1
 Pivot           = center
 Body            = CharacterBody
 ChildList       = HealthBar # CharacterAttack
+OnDelete        = > Object.GetPosition ^ true, > Object.Create ExplosionSet, Object.SetPosition < < true
 
 ; Input set
 Input           = CharacterInput
@@ -191,6 +192,7 @@ Body            = MobAttackProjectileBody
 Graphic         = BulletInverted
 Flip            = y
 Position        = (-5, 17) ~ (5, 17)
+OnDelete        = > Object.GetPosition ^ true, > Object.Create ExplosionMini, Object.SetPosition < < true
 
 [MobAttackProjectileBody@AttackProjectileBody]
 PartList        = MobAttackProjectileBodyPart
@@ -294,7 +296,6 @@ Flip            = y
 Pivot           = center
 Body            = MobBody
 ChildList       = MobAttack
-Age             = 0 ~ 1
 
 Speed           = (0, 50.0) ~ (0, 100.0)
 OnDestruction   = Game.AddScore 1
@@ -343,7 +344,7 @@ HealthImpact    = -20
 
 [RedCWave]
 Spawner         = RedCSpawner
-Position        = (-600, -300) ~ (600, -300)
+Position        = (-600, -370) ~ (600, -370)
 LifeTime        = spawner
 
 [RedCSpawner]
@@ -367,17 +368,28 @@ Object          = GreenC
 
 [Mobs]
 Spawner         = @
-;Object          = RedA # RedB # RedC # BlueA # BlueB # BlueC # GreenA # GreenB # GreenC
-;Object          = RedC # BlueC # GreenC
 Object          = RedCWave # BlueCWave # GreenCWave
-;ActiveObject    = 1
 WaveSize        = 1 ~ 3
 WaveDelay       = 2 ~ 5
 Immediate       = true
 UseSelfAsParent = true
 CleanOnDelete   = true
 
-; Explosion
+; Explosions
+
+[ExplosionSet]
+Spawner         = ExplosionSpawner
+
+[ExplosionSpawner]
+Object          = ExplosionMini # Explosion
+TotalObject     = 10
+WaveSize        = 1 ~ 3
+WaveDelay       = 0.1
+Immediate       = true
+ObjectSpeed     = (-20, -20) ~ (20, 20)
+
+[ExplosionMini@Explosion]
+Scale           = 0.5
 
 [Explosion]
 AnimationSet    = ExplosionAnimationSet
