Fix mob and explosion spawner lifetimes

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -379,6 +379,7 @@ CleanOnDelete   = true
 
 [ExplosionSet]
 Spawner         = ExplosionSpawner
+LifeTime        = spawner
 
 [ExplosionSpawner]
 Object          = ExplosionMini # Explosion
