Add arena/screen bounds for player
And adjust a few other positions and timing parameters

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -28,27 +28,59 @@ FrustumFar      = 2
 FrustumNear     = 0
 Position        = (0, 0, -1) ; Objects with -1 <= Z <= 1 will be visible
 GroupList       = background # default # hud
-Zoom            = 1
 
 [Scene]
-ChildList       = Logo # Sound # Character # Mobs # Score
+ChildList       = Logo # Character # Mobs # Score # Arena
 
-[Object]
+[Arena]
+ChildList       = ArenaTop # ArenaBottom # ArenaLeft # ArenaRight
+
+[ArenaTop]
+Body            = ArenaBody
+Graphic         = @
+Texture         = pixel
+ParentCamera    = MainCamera
+Pivot           = bottom center
+Size            = % > Get MainCamera FrustumWidth, return (<, 10)
+Position        = top center
+Color           = green
+
+[ArenaBottom@ArenaTop]
+Pivot           = top center
+Position        = bottom center
+Color           = blue
+
+[ArenaLeft@ArenaTop]
+Pivot           = right center
+Size            = % > Get MainCamera FrustumHeight, return (10, <)
+Position        = left center
+Color           = white
+
+[ArenaRight@ArenaLeft]
+Pivot           = left center
+Position        = right center
+Color           = red
+
+[ArenaBody]
+Dynamic         = false
+FixedRotation   = true
+PartList        = ArenaBodyPart
+
+[ArenaBodyPart]
+Type            = box
+SelfFlags       = arena
+CheckMask       = character
+Solid           = true
 
 [Logo]
 Group           = background
 Graphic         = @
 Alpha           = 0.1
-Scale           = 2
+Scale           = 1
 Texture         = logo.png
 Pivot           = center
 AngularVelocity = 18
 FXList          = FadeIn # ColorCycle
-
-[Sound]
-SoundList       = @
-Sound           = appear.ogg
-LifeTime        = sound
 
 [FadeIn]
 SlotList        = @
@@ -100,8 +132,8 @@ TextureSize     = (16, 16)
 
 [Character]
 Graphic         = CharacterGraphic
-Scale           = 1
 Pivot           = center
+Position        = (0, 300)
 Body            = CharacterBody
 ChildList       = HealthBar # CharacterAttack
 OnDelete        = > Object.GetPosition ^ true, > Object.Create ExplosionSet, Object.SetPosition < < true
@@ -136,8 +168,8 @@ PartList        = CharacterHitPart
 [CharacterHitPart]
 Type            = box
 SelfFlags       = character
-CheckMask       = mob # attack
-Solid           = false
+CheckMask       = mob # attack # arena
+Solid           = true
 
 ; Attack objects
 
@@ -344,7 +376,7 @@ HealthImpact    = -20
 
 [RedCWave]
 Spawner         = RedCSpawner
-Position        = (-600, -370) ~ (600, -370)
+Position        = (-600, -390) ~ (600, -390)
 LifeTime        = spawner
 
 [RedCSpawner]
@@ -367,10 +399,12 @@ Spawner         = GreenCSpawner
 Object          = GreenC
 
 [Mobs]
-Spawner         = @
+Spawner         = MobSpawner
+
+[MobSpawner]
 Object          = RedCWave # BlueCWave # GreenCWave
 WaveSize        = 1 ~ 3
-WaveDelay       = 2 ~ 5
+WaveDelay       = 5 ~ 10
 Immediate       = true
 UseSelfAsParent = true
 CleanOnDelete   = true
