Faster player plane and shots
Variable points per plane

--- a/data/config/tinymicro.ini
+++ b/data/config/tinymicro.ini
@@ -142,7 +142,7 @@ OnDelete        = > Object.GetPosition ^ true, > Object.Create ExplosionSet, Obj
 Input           = CharacterInput
 
 ; Movement speed
-Speed           = 100.0
+Speed           = 200.0
 
 ; Healing rate
 HealthPS        = 1
@@ -200,7 +200,7 @@ Solid           = false
 
 [CharacterAttackProjectile@AttackProjectile]
 Body            = CharacterAttackProjectileBody
-Speed           = (0, -150)
+Speed           = (0, -350)
 Position        = (-5, -17) ~ (5, -17)
 
 [CharacterAttackProjectileBody@AttackProjectileBody]
@@ -306,6 +306,9 @@ TileOffset      = (2, 1)
 [BlueC@Mob]
 FXList          = MobWobbleFX
 
+; Points awarded for one
+Points          = 3
+
 [BlueCGraphic@PixelShipsGraphic]
 TileOffset      = (0, 2)
 
@@ -313,11 +316,17 @@ TileOffset      = (0, 2)
 Rotation        = -45 ~ 45
 UseRelativeSpeed= true
 
+; Points awarded for one
+Points          = 1
+
 [RedCGraphic@PixelShipsGraphic]
 TileOffset      = (1, 2)
 
 [GreenC@Mob]
 FXList          = MobFlipFX # MobTurnFX # MobWobbleFX
+
+; Points awarded for one
+Points          = 2
 
 [GreenCGraphic@PixelShipsGraphic]
 TileOffset      = (2, 2)
@@ -330,7 +339,7 @@ Body            = MobBody
 ChildList       = MobAttack
 
 Speed           = (0, 50.0) ~ (0, 100.0)
-OnDestruction   = Game.AddScore 1
+OnDestruction   = > Object.GetName ^, > Get < Points, Game.AddScore <
 
 OnDelete        = > Object.GetPosition ^ true, > Object.Create Explosion, Object.SetPosition < < true
 
